err.log
gcc -Wall -Wmissing-prototypes -Wpointer-arith -Wdeclaration-after-statement -Werror=vla -Werror=unguarded-availability-new -Wendif-labels -Wmissing-format-attribute -Wcast-function-type -Wformat-security -Wmissing-variable-declarations -fno-strict-aliasing -fwrapv -fexcess-precision=standard -Wno-unused-command-line-argument -Wno-compound-token-split-by-macro -Wno-format-truncation -Wno-cast-function-type-strict -g -O0 -g3  -fvisibility=hidden -I. -I./ -I/Users/hp/pg-dev/include/postgresql/server -I/Users/hp/pg-dev/include/postgresql/internal -isysroot /Library/Developer/CommandLineTools/SDKs/MacOSX15.5.sdk -I/opt/homebrew/opt/flex/include  -I/opt/homebrew/opt/icu4c@78/include    -c -o auto_index.o auto_index.c
auto_index.c:143:31: error: use of undeclared identifier 'auto_index_shmem_request_hook'; did you mean 'auto_index_shmem_request'?
  143 |     shmem_request_hook      = auto_index_shmem_request_hook;
      |                               ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~
      |                               auto_index_shmem_request
auto_index.c:106:1: note: 'auto_index_shmem_request' declared here
  106 | auto_index_shmem_request(void)
      | ^
auto_index.c:146:31: error: use of undeclared identifier 'auto_index_shmem_startup_hook'; did you mean 'auto_index_shmem_startup'?
  146 |     shmem_startup_hook      = auto_index_shmem_startup_hook;
      |                               ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~
      |                               auto_index_shmem_startup
auto_index.c:113:1: note: 'auto_index_shmem_startup' declared here
  113 | auto_index_shmem_startup(void)
      | ^
2 errors generated.
make: *** [auto_index.o] Error 1
